Made firefoxx run using prime-run

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,8 +5,8 @@
 #
 
 
-monitor=eDP-1,3840x2160,auto,2 # Laptop
-monitor=DP-3,3840x2160,auto,2  # Dell Monitor
+monitor=eDP-1,3840x2160,1920x0,2 # Laptop
+monitor=DP-3,3840x2160,0x0,2  # Dell Monitor
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -115,8 +115,8 @@ $mainMod = SUPER
 bind = $mainMod, T, exec, kitty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, L, exit, 
-bind = $mainMod, B, exec, firefox
-bind = $mainMod, E, exec, dolphin
+bind = $mainMod, B, exec, prime-run firefox
+bind = $mainMod, N, exec, nautilus
 bind = $mainMod, F, togglefloating, 
 # bind = $mainMod, R, exec, wofi --show drun
 # bind = $mainMod, P, pseudo, # dwindle
