Modified the waybar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -114,8 +114,9 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, kitty
 bind = $mainMod, Q, killactive, 
-bind = $mainMod, L, exit, 
-bind = $mainMod, B, exec, prime-run firefox
+bind = $mainMod, L, exit,
+bind = $mainMod, B, exec, firefox
+bind = $mainMod SHIFT, B, exec, prime-run firefox
 bind = $mainMod, N, exec, nautilus
 bind = $mainMod, F, togglefloating, 
 # bind = $mainMod, R, exec, wofi --show drun
