--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,13 +1,11 @@
 {
     "layer": "top",
     "position": "top",
-    "mod": "dock",	
+    "mod": "dock",
     "exclusive": true,
     "passtrough": false,
     "gtk-layer-shell": true,
     "height": 0,
-
-// Modules Start //
     "modules-left": [
         "clock",
         // "cpu",
@@ -17,8 +15,12 @@
     "modules-center": ["hyprland/window"],
     "modules-right": [
         "tray",
+        // "custom/language",
+	"backlight",
+        "pulseaudio",
+        "pulseaudio#microphone",
+	"battery"
     ],
-// Modules End //
 
     "hyprland/window": {
         "format": "{}"
@@ -29,7 +31,7 @@
         "all-outputs": true,
         "on-click": "activate",
         "format": "{icon}",
-	"format-icons": {
+        "format-icons": {
             "1": "",
             "2": "",
             "3": "",
@@ -40,6 +42,24 @@
             "default": ""
         }
     },
+    // "cpu": {
+    //     "interval": 10,
+    //     "format": " {}%",
+    //     "max-length": 10,
+    //     "on-click": ""
+    // },
+    // "memory": {
+    //     "interval": 30,
+    //     "format": " {}%",
+    //     "format-alt":" {used:0.1f}G",
+    //     "max-length": 10
+    // }, 
+    // "custom/language": {
+    //     "exec": "cat /tmp/kb_layout",
+    //     "interval": 3,
+    //     "format": " {}",
+    //     "tooltip": false
+    // }, 
     "tray": {
         "icon-size": 13,
         "tooltip": false,
@@ -49,4 +69,49 @@
         "format": "{: %R   %d/%m}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
     },
+    "backlight": {
+	"format": "{icon} {percent}%",
+	"device": "intel_backlight",
+	"format-icons": ["", "󰃟", "󰃠"]
+    },
+    "pulseaudio": {
+        "format": "{icon} {volume}%",
+        "tooltip": false,
+        "format-muted": " Muted",
+        "on-click": "pamixer -t",
+        "on-scroll-up": "pamixer -i 5",
+        "on-scroll-down": "pamixer -d 5",
+        "scroll-step": 5,
+        "format-icons": {
+            "headphone": "",
+            "hands-free": "",
+            "headset": "",
+            "phone": "",
+            "portable": "",
+            "car": "",
+            "default": ["", "", ""]
+        }
+    },
+    "pulseaudio#microphone": {
+        "format": "{format_source}",
+        "tooltip": false,
+        "format-source": " {volume}%",
+        "format-source-muted": " Muted",
+        "on-click": "pamixer --default-source -t",
+        "on-scroll-up": "pamixer --default-source -i 5",
+        "on-scroll-down": "pamixer --default-source -d 5",
+        "scroll-step": 5
+    },
+    "battery": {
+    	"bat": "BAT0",
+    	"interval": 60,
+    	"states": {
+            "warning": 30,
+            "critical": 15
+    	},
+        "format": "{capacity}% {icon}",
+        "format-icons": ["", "", "", "", ""],
+        "max-length": 25
 }
+}
+
