Made lots of new keybinds to change brightness, volume, muting and so on

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,7 +12,7 @@ monitor=DP-3,3840x2160,0x0,2  # Dell Monitor
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & hyprpaper &
+exec-once = waybar & hyprpaper & dunst &
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -52,7 +52,7 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
+    rounding = 5
     blur = yes
     blur_size = 3
     blur_passes = 1
@@ -160,3 +160,18 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Audio
+## Output
+bind = SUPER ALT, up, exec, wpctl set-volume @DEFAULT_SINK@ 5%+ &
+bind = SUPER ALT, down, exec, wpctl set-volume @DEFAULT_SINK@ 5%- &
+bind = SUPER ALT, M, exec, wpctl set-mute @DEFAULT_SINK@ toggle &
+
+## Input
+bind = SUPER SHIFT ALT, up, exec, wpctl set-volume @DEFAULT_SOURCE@ 5%+ &
+bind = SUPER SHIFT ALT, down, exec, wpctl set-volume @DEFAULT_SOURCE@ 5%- &
+bind = SUPER SHIFT ALT, M, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle &
+
+# Backlight - requires 'brightnessctl'
+bind = SUPER ALT, left, exec, brightnessctl set 5%- --min-value=10000
+bind = SUPER ALT, right, exec, brightnessctl set 5%+ --min-value=10000
