--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -114,14 +114,19 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, kitty
 bind = $mainMod, Q, killactive, 
-bind = $mainMod, L, exit,
 bind = $mainMod, B, exec, firefox
 bind = $mainMod SHIFT, B, exec, prime-run firefox
 bind = $mainMod, N, exec, nautilus
 bind = $mainMod, F, togglefloating, 
-# bind = $mainMod, R, exec, wofi --show drun
+bind = $mainMod, R, exec, wofi --show drun
+
 # bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
+
+# Shutdowns and reboot
+bind = $mainMod SHIFT, L, exec, poweroff
+bind = $mainMod SHIFT, R, exec, reboot
+bind = $mainMod, L, exit,
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
