--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -32,14 +32,14 @@
         "on-scroll-down": "hyprctl dispatch workspace e-1",
         "all-outputs": true,
         "on-click": "activate",
-        "format": "{icon}",
+        "format": "{name}",
         "format-icons": {
             "1": "",
             "2": "",
             "3": "",
             "4": "",
             "5": "",
-	    "6": "",
+	          "6": "",
             "urgent": "",
             "default": ""
         }
