--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -16,11 +16,11 @@
     "modules-right": [
         "tray",
         // "custom/language",
-	"backlight",
-	"pulseaudio",
-	"pulseaudio#microphone",
+        "backlight",
+	      "pulseaudio",
+	      "pulseaudio#microphone",
         //"wireplumber",
-	"battery"
+	      "battery"
     ],
 
     "hyprland/window": {
@@ -32,14 +32,14 @@
         "on-scroll-down": "hyprctl dispatch workspace e-1",
         "all-outputs": true,
         "on-click": "activate",
-        "format": "{name}",
+        "format": "{icon}",
         "format-icons": {
-            "1": "",
-            "2": "",
-            "3": "",
-            "4": "",
-            "5": "",
-	          "6": "",
+            "1": "󰲡",
+            "2": "󰲣",
+            "3": "󰲥",
+            "4": "󰲧",
+            "5": "󰲩",
+	          "6": "󰲫",
             "urgent": "",
             "default": ""
         }
@@ -69,16 +69,15 @@
         "tooltip": false,
         "spacing": 10
     },
-
     "clock": {
         "format": "{: %R   %d/%m}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
     },
 
     "backlight": {
-	"format": "{icon} {percent}%",
-	"device": "intel_backlight",
-	"format-icons": ["", "󰃟", "󰃠"]
+	      "format": "{icon} {percent}%",
+	      "device": "intel_backlight",
+	      "format-icons": ["", "󰃟", "󰃠"]
     },
     "pulseaudio": {
         "format": "{icon} {volume}%",
@@ -105,15 +104,15 @@
         "format-source-muted": " Muted",
     },
     "wireplumber": {
-	"format": "{volume}% {icon}",
-	"format-muted": "",
-    	"format-icons": ["", "", ""]
+	      "format": "{volume}% {icon}",
+	      "format-muted": "",
+    	  "format-icons": ["", "", ""]
     },
 
     "battery": {
-    	"bat": "BAT0",
-    	"interval": 60,
-    	"states": {
+    	  "bat": "BAT0",
+    	  "interval": 60,
+    	  "states": {
             "warning": 30,
             "critical": 15
     	},
