--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -6,13 +6,11 @@
     "passtrough": false,
     "gtk-layer-shell": true,
     "height": 0,
+    "margin": 10,
     "modules-left": [
-        "clock",
-        // "cpu",
-        // "memory",
         "wlr/workspaces"
     ],
-    "modules-center": ["hyprland/window"],
+    "modules-center": ["clock"],
     "modules-right": [
         "tray",
         // "custom/language",
@@ -45,30 +43,12 @@
         }
     },
 
-    // "cpu": {
-    //     "interval": 10,
-    //     "format": " {}%",
-    //     "max-length": 10,
-    //     "on-click": ""
-    // },
-    // "memory": {
-    //     "interval": 30,
-    //     "format": " {}%",
-    //     "format-alt":" {used:0.1f}G",
-    //     "max-length": 10
-    // }, 
-    // "custom/language": {
-    //     "exec": "cat /tmp/kb_layout",
-    //     "interval": 3,
-    //     "format": " {}",
-    //     "tooltip": false
-    // },
-
     "tray": {
         "icon-size": 13,
         "tooltip": false,
         "spacing": 10
     },
+
     "clock": {
         "format": "{: %R   %d/%m}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
@@ -79,14 +59,11 @@
 	      "device": "intel_backlight",
 	      "format-icons": ["", "󰃟", "󰃠"]
     },
+
     "pulseaudio": {
         "format": "{icon} {volume}%",
         "tooltip": false,
         "format-muted": " Muted",
-        "on-click": "pamixer -t",
-        "on-scroll-up": "pamixer -i 5",
-        "on-scroll-down": "pamixer -d 5",
-        "scroll-step": 5,
         "format-icons": {
             "headphone": "",
             "hands-free": "",
@@ -97,12 +74,14 @@
             "default": ["", "", ""]
         }
     },
+
     "pulseaudio#microphone": {
         "format": "{format_source}",
         "tooltip": false,
         "format-source": " {volume}%",
         "format-source-muted": " Muted",
     },
+
     "wireplumber": {
 	      "format": "{volume}% {icon}",
 	      "format-muted": "",
@@ -115,7 +94,7 @@
     	  "states": {
             "warning": 30,
             "critical": 15
-    	},
+    	  },
         "format": "{capacity}% {icon}",
         "format-icons": ["", "", "", "", ""],
         "max-length": 25
