--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,26 +1,17 @@
-
-#
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-#
-
-
+##### Monitors #####
 monitor=eDP-1,3840x2160,1920x0,2 # Laptop
 monitor=DP-3,3840x2160,0x0,2  # Dell Monitor
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
-# Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
+##### Start-up #####
 exec-once = waybar & hyprpaper & dunst &
 
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
 
-# Some default env vars.
+##### Environment #####
 env = XCURSOR_SIZE,24
 
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
+
+##### Keyboard Layout #####
 input {
     kb_layout = dk
     kb_variant =
@@ -37,9 +28,9 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
-general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
+##### Visual & Layout #####
+general {
     gaps_in = 5
     gaps_out = 10
     border_size = 2
@@ -50,8 +41,6 @@ general {
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     rounding = 5
     blur = yes
     blur_size = 3
@@ -66,9 +55,6 @@ decoration {
 
 animations {
     enabled = yes
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
     animation = windows, 1, 7, myBezier
@@ -80,103 +66,103 @@ animations {
 }
 
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
+    pseudotile = yes 
+    preserve_split = yes
 }
 
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
 }
 
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = off
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
+
+##### Mouse #####
 device:epic mouse V1 {
     sensitivity = -0.5
 }
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+
+##### Bindings #####
+### Processes ###
+bind = SUPER, RETURN, exec, kitty
+bind = SUPER, Q, killactive, 
+bind = SUPER, B, exec, firefox
+bind = SUPER SHIFT, B, exec, prime-run firefox
+bind = SUPER, N, exec, nautilus
+bind = SUPER, R, exec, wofi --show drun
+
+### Shutdowns and reboot ###
+bind = SUPER SHIFT, L, exec, poweroff
+bind = SUPER SHIFT, R, exec, reboot
+bind = SUPER, L, exit,
 
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, T, exec, kitty
-bind = $mainMod, Q, killactive, 
-bind = $mainMod, B, exec, firefox
-bind = $mainMod SHIFT, B, exec, prime-run firefox
-bind = $mainMod, N, exec, nautilus
-bind = $mainMod, F, togglefloating, 
-bind = $mainMod, R, exec, wofi --show drun
+##### WORKSPACES & WINDOWS #####
+# Switch Workspace
+bind = CTRL, left, workspace, e-1
+bind = CTRL, right, workspace, e+1
+bind = CTRL, 1, workspace, 1
+bind = CTRL, 2, workspace, 2
+bind = CTRL, 3, workspace, 3
+bind = CTRL, 4, workspace, 4
+bind = CTRL, 5, workspace, 5
 
-# bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
+# Switch Focus
+bind = CTRL ALT, left, movefocus, l
+bind = CTRL ALT, right, movefocus, r
+bind = CTRL ALT, up, movefocus, u
+bind = CTRL ALT, down, movefocus, d
 
-# Shutdowns and reboot
-bind = $mainMod SHIFT, L, exec, poweroff
-bind = $mainMod SHIFT, R, exec, reboot
-bind = $mainMod, L, exit,
+# Move To Workspace
+bind = CTRL SHIFT, left, movetoworkspace, e-1
+bind = CTRL SHIFT, right, movetoworkspace, e+1
+bind = CTRL SHIFT, 1, movetoworkspace, 1
+bind = CTRL SHIFT, 2, movetoworkspace, 2
+bind = CTRL SHIFT, 3, movetoworkspace, 3
+bind = CTRL SHIFT, 4, movetoworkspace, 4
+bind = CTRL SHIFT, 5, movetoworkspace, 5
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# Move Window in Workspace Around
+bind = CTRL SHIFT ALT, left, movewindow, l
+bind = CTRL SHIFT ALT, right, movewindow, r
+bind = CTRL SHIFT ALT, up, movewindow, u
+bind = CTRL SHIFT ALT, down, movewindow, d
 
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = CTRL SHIFT ALT, RETURN, submap, resize
+submap = resize
+binde = , right, resizeactive, 10 0
+binde = , left, resizeactive, -10 0
+binde = , up, resizeactive, 0 -10
+binde = , down, resizeactive, 0 10
+bind = , RETURN, submap, reset
+bind = , ESCAPE, submap, reset 
+submap = reset
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bindm = CTRL, mouse:272, movewindow
+bindm = CTRL, mouse:273, resizewindow
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+# Other
+bind = CTRL, down, pseudo,
+bind = CTRL, up, togglefloating, 
+bind = CTRL, RETURN, togglesplit,
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
 
-# Audio
-## Output
+### Audio ###
+# Output
 bind = SUPER ALT, up, exec, wpctl set-volume @DEFAULT_SINK@ 5%+ &
 bind = SUPER ALT, down, exec, wpctl set-volume @DEFAULT_SINK@ 5%- &
 bind = SUPER ALT, M, exec, wpctl set-mute @DEFAULT_SINK@ toggle &
 
-## Input
+# Input
 bind = SUPER SHIFT ALT, up, exec, wpctl set-volume @DEFAULT_SOURCE@ 5%+ &
 bind = SUPER SHIFT ALT, down, exec, wpctl set-volume @DEFAULT_SOURCE@ 5%- &
 bind = SUPER SHIFT ALT, M, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle &
 
-# Backlight - requires 'brightnessctl'
+
+### Backlight ###
 bind = SUPER ALT, left, exec, brightnessctl set 5%- --min-value=10000
 bind = SUPER ALT, right, exec, brightnessctl set 5%+ --min-value=10000
