--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,7 @@ monitor=DP-3,3840x2160,0x0,2  # Dell Monitor
 
 
 ##### Start-up #####
-exec-once = waybar & hyprpaper & dunst &
+exec-once = waybar & hyprpaper & dunst & nextcloud &
 
 
 ##### Environment #####
@@ -32,7 +32,7 @@ input {
 ##### Visual & Layout #####
 general {
     gaps_in = 5
-    gaps_out = 10
+    gaps_out = 5
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -87,12 +87,12 @@ device:epic mouse V1 {
 
 ##### Bindings #####
 ### Processes ###
-bind = SUPER, RETURN, exec, kitty
+bind = SUPER, T, exec, kitty
 bind = SUPER, Q, killactive, 
 bind = SUPER, B, exec, firefox
 bind = SUPER SHIFT, B, exec, prime-run firefox
 bind = SUPER, N, exec, nautilus
-bind = SUPER, R, exec, wofi --show drun
+bind = SUPER, RETURN, exec, wofi --show drun
 
 ### Shutdowns and reboot ###
 bind = SUPER SHIFT, L, exec, poweroff
