Changed back to using SUPER for workspaces

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,9 @@ monitor=DP-3,3840x2160,0x0,2  # Dell Monitor
 
 
 ##### Start-up #####
-exec-once = waybar & hyprpaper & dunst & nextcloud &
+exec-once = waybar & hyprpaper & dunst &
+exec-once = sleep 5
+exec-once = nextcloud &
 
 
 ##### Environment #####
@@ -103,36 +105,36 @@ bind = SUPER, L, exit,
 
 ##### WORKSPACES & WINDOWS #####
 # Switch Workspace
-bind = CTRL, left, workspace, e-1
-bind = CTRL, right, workspace, e+1
-bind = CTRL, 1, workspace, 1
-bind = CTRL, 2, workspace, 2
-bind = CTRL, 3, workspace, 3
-bind = CTRL, 4, workspace, 4
-bind = CTRL, 5, workspace, 5
+bind = SUPER, left, workspace, e-1
+bind = SUPER, right, workspace, e+1
+bind = SUPER, 1, workspace, 1
+bind = SUPER, 2, workspace, 2
+bind = SUPER, 3, workspace, 3
+bind = SUPER, 4, workspace, 4
+bind = SUPER, 5, workspace, 5
 
 # Switch Focus
-bind = CTRL ALT, left, movefocus, l
-bind = CTRL ALT, right, movefocus, r
-bind = CTRL ALT, up, movefocus, u
-bind = CTRL ALT, down, movefocus, d
+bind = SUPER ALT, left, movefocus, l
+bind = SUPER ALT, right, movefocus, r
+bind = SUPER ALT, up, movefocus, u
+bind = SUPER ALT, down, movefocus, d
 
 # Move To Workspace
-bind = CTRL SHIFT, left, movetoworkspace, e-1
-bind = CTRL SHIFT, right, movetoworkspace, e+1
-bind = CTRL SHIFT, 1, movetoworkspace, 1
-bind = CTRL SHIFT, 2, movetoworkspace, 2
-bind = CTRL SHIFT, 3, movetoworkspace, 3
-bind = CTRL SHIFT, 4, movetoworkspace, 4
-bind = CTRL SHIFT, 5, movetoworkspace, 5
+bind = SUPER SHIFT, left, movetoworkspace, e-1
+bind = SUPER SHIFT, right, movetoworkspace, e+1
+bind = SUPER SHIFT, 1, movetoworkspace, 1
+bind = SUPER SHIFT, 2, movetoworkspace, 2
+bind = SUPER SHIFT, 3, movetoworkspace, 3
+bind = SUPER SHIFT, 4, movetoworkspace, 4
+bind = SUPER SHIFT, 5, movetoworkspace, 5
 
 # Move Window in Workspace Around
-bind = CTRL SHIFT ALT, left, movewindow, l
-bind = CTRL SHIFT ALT, right, movewindow, r
-bind = CTRL SHIFT ALT, up, movewindow, u
-bind = CTRL SHIFT ALT, down, movewindow, d
+bind = SUPER SHIFT ALT, left, movewindow, l
+bind = SUPER SHIFT ALT, right, movewindow, r
+bind = SUPER SHIFT ALT, up, movewindow, u
+bind = SUPER SHIFT ALT, down, movewindow, d
 
-bind = CTRL SHIFT ALT, RETURN, submap, resize
+bind = SUPER SHIFT ALT, RETURN, submap, resize
 submap = resize
 binde = , right, resizeactive, 10 0
 binde = , left, resizeactive, -10 0
@@ -142,27 +144,27 @@ bind = , RETURN, submap, reset
 bind = , ESCAPE, submap, reset 
 submap = reset
 
-bindm = CTRL, mouse:272, movewindow
-bindm = CTRL, mouse:273, resizewindow
+bindm = SUPER, mouse:272, movewindow
+bindm = SUPER, mouse:273, resizewindow
 
 # Other
-bind = CTRL, down, pseudo,
-bind = CTRL, up, togglefloating, 
-bind = CTRL, RETURN, togglesplit,
+bind = SUPER, down, pseudo,
+bind = SUPER, up, togglefloating, 
+bind = SUPER, RETURN, togglesplit,
 
 
 ### Audio ###
 # Output
-bind = SUPER ALT, up, exec, wpctl set-volume @DEFAULT_SINK@ 5%+ &
-bind = SUPER ALT, down, exec, wpctl set-volume @DEFAULT_SINK@ 5%- &
-bind = SUPER ALT, M, exec, wpctl set-mute @DEFAULT_SINK@ toggle &
+bind = SUPER CTRL, up, exec, wpctl set-volume @DEFAULT_SINK@ 5%+ &
+bind = SUPER CTRL, down, exec, wpctl set-volume @DEFAULT_SINK@ 5%- &
+bind = SUPER CTRL, M, exec, wpctl set-mute @DEFAULT_SINK@ toggle &
 
 # Input
-bind = SUPER SHIFT ALT, up, exec, wpctl set-volume @DEFAULT_SOURCE@ 5%+ &
-bind = SUPER SHIFT ALT, down, exec, wpctl set-volume @DEFAULT_SOURCE@ 5%- &
-bind = SUPER SHIFT ALT, M, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle &
+bind = SUPER CTRL SHIFT, up, exec, wpctl set-volume @DEFAULT_SOURCE@ 5%+ &
+bind = SUPER CTRL SHIFT, down, exec, wpctl set-volume @DEFAULT_SOURCE@ 5%- &
+bind = SUPER CTRL SHIFT, M, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle &
 
 
 ### Backlight ###
-bind = SUPER ALT, left, exec, brightnessctl set 5%- --min-value=10000
-bind = SUPER ALT, right, exec, brightnessctl set 5%+ --min-value=10000
+bind = SUPER CTRL, left, exec, brightnessctl set 5%- --min-value=10000
+bind = SUPER CTRL, right, exec, brightnessctl set 5%+ --min-value=10000
