--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -150,7 +150,7 @@ bindm = SUPER, mouse:273, resizewindow
 # Other
 bind = SUPER, down, pseudo,
 bind = SUPER, up, togglefloating, 
-bind = SUPER, RETURN, togglesplit,
+bind = SUPER SHIFT, RETURN, togglesplit,
 
 
 ### Audio ###
