--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,7 +36,7 @@ general {
     gaps_in = 5
     gaps_out = 5
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(89b4faee)
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
