Implemented battery showing charging

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -95,8 +95,9 @@
             "warning": 30,
             "critical": 15
     	  },
-        "format": "{capacity}% {icon}",
+        "format": "{icon} {capacity}%",
         "format-icons": ["", "", "", "", ""],
+        "format-charging": " {capacity}%",
         "max-length": 25
     },
 
