--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,6 +8,8 @@ exec-once = waybar & hyprpaper & dunst &
 exec-once = sleep 5
 exec-once = nextcloud &
 
+# For screen sharing
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 ##### Environment #####
 env = XCURSOR_SIZE,24
