Changed waybar workspace icons labels

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-##### Monitors #####
+:##### Monitors #####
 monitor=eDP-1,3840x2160,1920x0,2 # Laptop
 monitor=DP-3,3840x2160,0x0,2  # Dell Monitor
 
@@ -38,7 +38,7 @@ general {
     gaps_in = 3
     gaps_out = 5
     border_size = 3
-    col.active_border = rgba(fab387ee)
+    col.active_border = rgba(ba3654ee)
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
@@ -97,6 +97,7 @@ bind = SUPER, B, exec, firefox
 bind = SUPER SHIFT, B, exec, prime-run firefox
 bind = SUPER, N, exec, nautilus
 bind = SUPER, RETURN, exec, wofi --show drun
+
 
 ### Shutdowns and reboot ###
 bind = SUPER SHIFT, L, exec, poweroff
