Added screenlock utility

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,8 +4,8 @@ monitor=DP-3,3840x2160,0x0,2  # Dell Monitor
 
 
 ##### Start-up #####
-exec-once = waybar & hyprpaper & dunst &
-exec-once = sleep 5
+exec-once = dunst & hyprpaper & waybar &
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = nextcloud &
 
 # For screen sharing
@@ -100,10 +100,11 @@ bind = SUPER, RETURN, exec, wofi --show drun
 
 
 ### Shutdowns and reboot ###
+bind = SUPER, L, exec, /home/frederik/.config/scripts/lockscreen.sh
 bind = SUPER SHIFT, L, exec, poweroff
-bind = SUPER SHIFT, R, exec, reboot
-bind = SUPER, L, exit,
+bind = SUPER ALT, L, exit, 
 
+bind = SUPER SHIFT, R, exec, reboot
 
 
 ##### WORKSPACES & WINDOWS #####
