--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-:##### Monitors #####
+##### Monitors #####
 monitor=eDP-1,3840x2160,1920x0,2 # Laptop
 monitor=DP-3,3840x2160,0x0,2  # Dell Monitor
 
@@ -14,6 +14,9 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 ##### Environment #####
 env = XCURSOR_SIZE,24
 
+
+##### Window Rules #####
+windowrulev2 = opacity 0.90 0.90, class:^(.*)$ 
 
 ##### Keyboard Layout #####
 input {
