--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -38,30 +38,30 @@ input {
 
 ##### Visual & Layout #####
 general {
-    gaps_in = 3
-    gaps_out = 5
-    border_size = 3
+    gaps_in = 0
+    gaps_out = 0
+    border_size = 2
     col.active_border = rgba(ba3654ee)
-    col.inactive_border = rgba(595959aa)
+    col.inactive_border = rgba(1e1e2ee6)
 
     layout = dwindle
 }
 
 decoration {
-    rounding = 5
-    blur = yes
+    rounding = 0
+    blur = no
     blur_size = 3
     blur_passes = 1
     blur_new_optimizations = on
 
-    drop_shadow = yes
+    drop_shadow = no
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 }
 
 animations {
-    enabled = yes
+    enabled = no
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
     animation = windows, 1, 7, myBezier
@@ -73,7 +73,7 @@ animations {
 }
 
 dwindle {
-    pseudotile = yes 
+    pseudotile = no 
     preserve_split = yes
 }
 
