--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,12 +1,28 @@
 ##### Monitors #####
 monitor=eDP-1,3840x2160,1920x0,2 # Laptop
 monitor=DP-3,3840x2160,0x0,2  # Dell Monitor
+#monitor=,preferred,auto,1,mirror,eDP-1 # Dell Monitor
+
+
+##### XORG SUPPORT #####
+# change monitor to hires, the last argument is the scale factor
+monitor=,highres,auto,1
+
+# sets xwayland scale
+exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 1
+
+# toolkit-specific scale
+env = GDK_SCALE,1
+env = XCURSOR_SIZE,32
+
 
 
 ##### Start-up #####
 exec-once = dunst & hyprpaper & waybar &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = nextcloud &
+
+exec-once = gammastep -P -O 4500 &
 
 # For screen sharing
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -16,7 +32,7 @@ env = XCURSOR_SIZE,24
 
 
 ##### Window Rules #####
-windowrulev2 = opacity 0.90 0.90, class:^(.*)$ 
+# windowrulev2 = opacity 0.90 0.90, class:^(.*)$ 
 
 ##### Keyboard Layout #####
 input {
@@ -97,6 +113,7 @@ device:epic mouse V1 {
 bind = SUPER, T, exec, kitty
 bind = SUPER, Q, killactive, 
 bind = SUPER, B, exec, firefox
+bind = SUPER ALT, B, exec, firefox -private
 bind = SUPER SHIFT, B, exec, prime-run firefox
 bind = SUPER, N, exec, nautilus
 bind = SUPER, RETURN, exec, wofi --show drun
